# const-anonymous-functions

./: Cargo.toml  README.md
src/: const_anon_functions.rs  lib.rs  test.rs
