[package]
name = "const-anonymous-functions"
description = "Simple macro to create const anonymous functions"
license = "MIT"
documentation = "https://docs.rs/const_anonymous_functions"
readme = "README.md"
repository = "https://github.com/Odilf/const_anonymous_functions"

keywords = ["const", "anonymous", "function", "macro"]

version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
